log
Thu 09 May 2024 08:47:09 PM UTC: 
 treemap.c | 64 ++++++++++++++++++++++++---------------------------------------
 1 file changed, 24 insertions(+), 40 deletions(-)
 tests:  4|7
total_score: 5/70
9685bee
Thu 09 May 2024 08:51:46 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |   TreeNode *parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd312fd
Thu 09 May 2024 08:52:20 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:5: error: ‘parent’ undeclared (first use in this function)
   60 |     parent = aux;
      |     ^~~~~~
treemap.c:60:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
cd312fd
Thu 09 May 2024 08:52:30 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |   TreeNode *parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9b33c3
Thu 09 May 2024 08:54:42 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
0629469
Thu 09 May 2024 08:57:32 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|6
total_score: 15/70
327ffa6
Thu 09 May 2024 08:58:54 PM UTC: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
16563e8
Thu 09 May 2024 09:00:48 PM UTC: 
 treemap.c | 23 ++++++++++++++---------
 1 file changed, 14 insertions(+), 9 deletions(-)
 tests:  0|0
da3c984
Thu 09 May 2024 09:02:13 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
d7881c9
Thu 09 May 2024 09:03:57 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  15|4
total_score: 25/70
16f3dd5
Thu 09 May 2024 09:07:49 PM UTC: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:134:13: error: unused variable ‘ub’ [-Werror=unused-variable]
  134 |   TreeNode *ub = NULL;
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
5156cfa
Thu 09 May 2024 09:10:11 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  17|3
total_score: 30/70
193d6c9
Thu 09 May 2024 09:11:57 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
716fbf6
